# Taller1

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  data_loader.py  hoteles_estelar_reporte.md  main.py  pyproject.toml  requirements.txt  skills-lock.json  system_prompt.md  system_prompt.txt
.atl/: skill-registry.md
.github/: copilot-instructions.md
app/: dashboard.py
data/estelar_reportes/: Hoteles_Estelar_Reporte.md  balance-general.md  capital-de-trabajo-activos-de-largo-plazo-otros.md  cifras-principales.md  estado-resultados.md  flujo-caja.md  hoteles_estelar.md  hoteles_estelar_agente_clientes.md  hoteles_estelar_web.md  informacion general.md  inteligencia empresarial.md  metricas_financieras.csv  reporte-financiero-completo.md
data/estelar_reportes/informes financieros/: capital-de-trabajo-activos-de-largo-plazo-otros.md  estado-resultados.md  flujo-caja.md
data/processed/: estelar_consolidado.txt
docs/: informe.md  prompts_experimentacion.md
llm/: data_loader.py  factory.py  faq_generator.py  memory.py  models.py  prompts.py  qa_chain.py  summarizer.py
llm/clients/: __init__.py  memory.py
llm/core/: __init__.py  faq_generator.py  qa.py  summarizer.py
llm/financial/: __init__.py  db.py  tool.py
llm/prompts/: __init__.py  faq.py  qa.py  resumen.py
llm/rag/: __init__.py  embeddings.py  sanitizer.py  vector_store.py
openspec/changes/archive/2026-05-16-financial-tool/: archive.md  proposal.md  spec.md
openspec/changes/rag-migration/: apply-progress-batch1.md  apply-progress-batch2.md  design.md  exploration.md  proposal.md  spec.md  tasks.md
scripts/: capture_analisis_individual.py  consolidar_estelar.py  estelar_scraper.py  extract_estelar_report.py  extract_hotelesestelar_web.py  flatten_to_single_table.py  ingestar_supabase.py  load_to_supabase.py  scraper_estelar.py
tests/: conftest.py  test_financial_db.py  test_financial_integration.py  test_financial_tool.py  test_sanitizacion.py
